prevent flickering

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -275,6 +275,9 @@ nav {
     padding-bottom: 1em;
     margin-top:0em;
     margin-bottom:3em;
+    .jobs {
+      display:none;
+    }
   }
 
   em {
